@@ -535,7 +535,7 @@ const char *EncodeString(SEXP s, int w, int quote, Rprt_adj justify)
 		    if(iswprint(wc)) {
 			/* The problem here is that wc may be
 			   printable according to the Unicode tables,
-			   but it may not be printable on the ouput
+			   but it may not be printable on the output
 			   device concerned. */
 			for(j = 0; j < res; j++) *q++ = *p++;
 		    } else {
